--- a/jimengyaojue/index.html
+++ b/jimengyaojue/index.html
@@ -41,16 +41,16 @@
     <div><a href="#接人章第九">接人章第九</a></div>
     <div><a href="#處世章第十">處世章第十</a></div>
 </div>
-<div class="juan">
-    <h3 id="序">
+<div class="juan" id="序">
+    <h3 >
         序
     </h3>
     <p>
         人生斯世。非學問。無以爲人。所謂學問者。亦非異常別件物事也。只是爲父當慈。爲子當孝。爲臣當忠。爲夫婦當別。爲兄弟當友。爲少者當敬長。爲朋友當有信。皆於日用動靜之間。隨事各得其當而已。非馳心玄妙。希覬奇效者也。但不學之人。心地茅塞。識見茫昧。故必須讀書窮理。以明當行之路。然後造詣得正。而踐履得中矣。今人不知學問在於日用。而妄意高遠難行。故推與別人。自安暴棄。豈不可哀也哉。余定居海山之陽。有一二學徒。相從問學。余慙無以爲師。而且恐初學不知向方。且無堅固之志。而泛泛請益。則彼此無補。反貽人譏。故略書一冊子。粗敍立心飭躬奉親接物之方。名曰擊蒙要訣。欲使學徒觀此。洗心立腳。當日下功。而余亦久患因循。欲以自警省焉。丁丑季冬。德水李珥。書。
     </p>
 </div>
-<div class="juan">
-    <h3 id="立志章第一">
+<div class="juan" id="立志章第一">
+    <h3>
         立志章第一
     </h3>
     <p>
@@ -66,8 +66,8 @@
         凡人自謂立志。而不卽用功。遲回等待者。名爲立志。而實無向學之誠故也。苟使吾志誠在於學。則爲仁由己。欲之則至。何求於人。何待於後哉。所貴乎立志者。卽下工夫。猶恐不及。念念不退故也。如或志不誠篤。因循度日。則窮年沒世。豈有所成就哉。
     </p>
 </div>
-<div class="juan">
-    <h3 id="革舊習章第二">
+<div class="juan" id="革舊習章第二">
+    <h3>
         革舊習章第二
     </h3>
     <p>
@@ -77,8 +77,8 @@
         其一。惰其心志。放其儀形。只思暇逸。深厭拘束。其二。常思動作。不能守靜。紛紜出入。打話度日。其三。喜同惡異。汩於流俗。稍欲修飭。恐乖於衆。其四。好以文辭。取譽於時。剽竊經傳。以飾浮藻。其五。工於筆札。業於琴酒。優游卒歲。自謂淸致。其六。好聚閒人。圍棋局戲。飽食終日。只資爭競。其七。歆羨富貴。厭薄貧賤。惡衣惡食。深以爲恥。其八。嗜慾無節。不能斷制。貨利聲色。其味如蔗。習之害心者大槪如斯。其餘難以悉擧。此習使人志不堅固。行不篤實。今日所爲。明日難改。朝悔其行。暮已復然。必須大奮勇猛之志。如將一刀快斷根株。淨洗心地。無毫髮餘脈。而時時每加猛省之功。使此心無一點舊染之汚。然後可以論進學之工夫矣。
     </p>
 </div>
-<div class="juan">
-    <h3 id="持身章第三">
+<div class="juan" id="持身章第三">
+    <h3>
         持身章第三
     </h3>
     <p>
@@ -130,8 +130,8 @@
         每日頻自點檢。心不存乎。學不進乎。行不力乎。有則改之。無則加勉。孜孜毋怠。斃而後已。
     </p>
 </div>
-<div class="juan">
-    <h3 id="讀書章第四">
+<div class="juan" id="讀書章第四">
+    <h3>
         讀書章第四
     </h3>
     <p>
@@ -174,8 +174,8 @@
         凡讀書。必熟讀一冊。盡曉義趣。貫通無疑。然後乃改讀他書。不可貪多務得。忙迫涉獵也。
     </p>
 </div>
-<div class="juan">
-    <h3 id="事親章第五">
+<div class="juan" id="事親章第五">
+    <h3>
         事親章第五
     </h3>
     <p>
@@ -203,8 +203,8 @@
         日用之間。一毫之頃。不忘父母。然後乃名爲孝。彼持身不謹。出言無章。嬉戲度日者。皆是忘父母者也。日月如流。事親不可久也。故爲子者須盡誠竭力。如恐不及可也。古人詩曰。古人一日養。不以三公換。所謂愛日者如此。
     </p>
 </div>
-<div class="juan">
-    <h3 id="喪制章第六">
+<div class="juan" id="喪制章第六">
+    <h3>
         喪制章第六
     </h3>
     <p>
@@ -252,8 +252,8 @@
         凡大功以上喪。則未葬前。非有故。不可出入。亦不可弔人。常以治喪講禮爲事。
     </p>
 </div>
-<div class="juan">
-    <h3 id="祭禮章第七">
+<div class="juan" id="祭禮章第七">
+    <h3>
         祭禮章第七
     </h3>
     <p>
@@ -284,8 +284,8 @@
         今俗多不識禮。其行祭之儀。家家不同。甚可笑也。若不一裁之以禮。則終不免紊亂無序。歸於夷虜之風矣。玆鈔祭禮。附錄於後。且爲之圖。須詳審倣行。而若父兄不欲。則當委曲陳達。期於歸正。
     </p>
 </div>
-<div class="juan">
-    <h3 id="居家章第八">
+<div class="juan" id="居家章第八">
+    <h3>
         居家章第八
     </h3>
     <p>
@@ -318,8 +318,8 @@
     <p>
         中朝則列邑之宰有私俸。故推其餘。可以周人之急矣。我國則守令別無私俸。只以公穀。應日用之需。而若私與他人。則不論多少。皆有罪譴。甚則至於犯贓。受者亦然。爲士而受守令之饋。則是乃犯禁也。古者。入國而問禁。則居其國者。豈可犯禁乎。守令之饋。大抵難受。若私與官庫之穀。則不論人之親疏。名之有無。物之多寡。皆不可受也。<span class="inlay2">若分厚邑宰。以衙中私財周急。則或可受也。</span></p>
 </div>
-<div class="juan">
-    <h3 id="接人章第九">
+<div class="juan" id="接人章第九">
+    <h3>
         接人章第九
     </h3>
     <p>
@@ -350,8 +350,8 @@
         居鄕之士。非公事禮見及不得已之故。則不可出入官府。邑宰雖至親。亦不可數數往見。況非親舊乎。若非義干請。則當一切勿爲也。
     </p>
 </div>
-<div class="juan">
-    <h3 id="處世章第十">
+<div class="juan" id="處世章第十">
+    <h3>
         處世章第十
     </h3>
     <p>
