--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -534,6 +534,7 @@
         <li><a href="./story/425.html">The Missing Recorder</a></li>
         <li><a href="./story/426.html">Contract for Body</a></li>
         <li><a href="./story/427.html">Dance</a></li>
+        <li><a href="./story/428.html">Bequest</a></li>
     </ol>
 
     <hr>
