--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -535,6 +535,7 @@
         <li><a href="./story/426.html">Contract for Body</a></li>
         <li><a href="./story/427.html">Dance</a></li>
         <li><a href="./story/428.html">Bequest</a></li>
+        <li><a href="./story/429.html">Fuxiang's Small Tale</a></li>
     </ol>
 
     <hr>
