--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -536,6 +536,7 @@
         <li><a href="./story/427.html">Dance</a></li>
         <li><a href="./story/428.html">Bequest</a></li>
         <li><a href="./story/429.html">Fuxiang's Small Tale</a></li>
+        <li><a href="./story/430.html">The Story Between The Lines</a></li>
     </ol>
 
     <hr>
