--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -537,6 +537,7 @@
         <li><a href="./story/428.html">Bequest</a></li>
         <li><a href="./story/429.html">Fuxiang's Small Tale</a></li>
         <li><a href="./story/430.html">The Story Between The Lines</a></li>
+        <li><a href="./story/431.html">Hengyuan's Secret</a></li>
     </ol>
 
     <hr>
