--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -539,6 +539,7 @@
         <li><a href="./story/430.html">The Story Between The Lines</a></li>
         <li><a href="./story/431.html">Hengyuan's Secret</a></li>
         <li><a href="./story/432.html">Luo Yuheng's Secret</a></li>
+        <li><a href="./story/433.html">Secret Chat</a></li>
     </ol>
 
     <hr>
