--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -540,6 +540,7 @@
         <li><a href="./story/431.html">Hengyuan's Secret</a></li>
         <li><a href="./story/432.html">Luo Yuheng's Secret</a></li>
         <li><a href="./story/433.html">Secret Chat</a></li>
+        <li><a href="./story/434.html">The Barbarian Delegation</a></li>
     </ol>
 
     <hr>
