--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -541,6 +541,7 @@
         <li><a href="./story/432.html">Luo Yuheng's Secret</a></li>
         <li><a href="./story/433.html">Secret Chat</a></li>
         <li><a href="./story/434.html">The Barbarian Delegation</a></li>
+        <li><a href="./story/435.html">Great Scholar Peiman Xilou</a></li>
     </ol>
 
     <hr>
