--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -542,6 +542,7 @@
         <li><a href="./story/433.html">Secret Chat</a></li>
         <li><a href="./story/434.html">The Barbarian Delegation</a></li>
         <li><a href="./story/435.html">Great Scholar Peiman Xilou</a></li>
+        <li><a href="./story/436.html">Literary Gathering</a></li>
     </ol>
 
     <hr>
