--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -543,6 +543,7 @@
         <li><a href="./story/434.html">The Barbarian Delegation</a></li>
         <li><a href="./story/435.html">Great Scholar Peiman Xilou</a></li>
         <li><a href="./story/436.html">Literary Gathering</a></li>
+        <li><a href="./story/437.html">Each Side</a></li>
     </ol>
 
     <hr>
