--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -545,6 +545,7 @@
         <li><a href="./story/436.html">Literary Gathering</a></li>
         <li><a href="./story/437.html">Each Side</a></li>
         <li><a href="./story/438.html">Night Meeting of the Heaven and Earth Society</a></li>
+        <li><a href="./story/439.html">Number One's Initiative</a></li>
     </ol>
 
     <hr>
