--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -549,6 +549,7 @@
         <li><a href="./story/440.html">Wang Simu's Shock</a></li>
         <li><a href="./story/441.html">Apprehension</a></li>
         <li><a href="./story/442.html">Great Warlock</a></li>
+        <li><a href="./story/443.html">Brilliant Scheme</a></li>
     </ol>
 
     <hr>
