--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -550,6 +550,8 @@
         <li><a href="./story/441.html">Apprehension</a></li>
         <li><a href="./story/442.html">Great Warlock</a></li>
         <li><a href="./story/443.html">Brilliant Scheme</a></li>
+        <li><a href="./story/444.html">That's it?</a></li>
+        <li><a href="./story/445.html">The Earth Book has Received a New Feature</a></li>
     </ol>
 
     <hr>
