--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -552,6 +552,7 @@
         <li><a href="./story/443.html">Brilliant Scheme</a></li>
         <li><a href="./story/444.html">That's it?</a></li>
         <li><a href="./story/445.html">The Earth Book has Received a New Feature</a></li>
+        <li><a href="./story/446.html">Half a Lifetime</a></li>
     </ol>
 
     <hr>
