--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -554,6 +554,7 @@
         <li><a href="./story/445.html">The Earth Book has Received a New Feature</a></li>
         <li><a href="./story/446.html">Half a Lifetime</a></li>
         <li><a href="./story/447.html">Drumbeat</a></li>
+        <li><a href="./story/448.html">Kindred</a></li>
     </ol>
 
     <hr>
