--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -556,6 +556,7 @@
         <li><a href="./story/447.html">Drumbeat</a></li>
         <li><a href="./story/448.html">Kindred</a></li>
         <li><a href="./story/449.html">Number One's Identity</a></li>
+        <li><a href="./story/450.html">Initial Exploration</a></li>
     </ol>
 
     <hr>
