--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -557,6 +557,7 @@
         <li><a href="./story/448.html">Kindred</a></li>
         <li><a href="./story/449.html">Number One's Identity</a></li>
         <li><a href="./story/450.html">Initial Exploration</a></li>
+        <li><a href="./story/451.html">The National Teacher's Suggestion</a></li>
     </ol>
 
     <hr>
