--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -558,6 +558,7 @@
         <li><a href="./story/449.html">Number One's Identity</a></li>
         <li><a href="./story/450.html">Initial Exploration</a></li>
         <li><a href="./story/451.html">The National Teacher's Suggestion</a></li>
+        <li><a href="./story/452.html">Zhende 26</a></li>
     </ol>
 
     <hr>
