--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -562,6 +562,7 @@
         <li><a href="./story/453.html">Southern Garden</a></li>
         <li><a href="./story/454.html">The Person at the Origin</a></li>
         <li><a href="./story/455.html">Honest announcement in the Heaven and Earth Society group</a></li>
+        <li><a href="./story/456.html">Each Side</a></li>
     </ol>
 
     <hr>
@@ -576,10 +577,11 @@
             <li>Laxarus 叄拾伍</li>
             <li>匿名 貳</li>
             <li>匿名 貳</li>
+            <li>秦 貳</li>
         </ul>
     </p>
 
-    <footer>
+    <footer> 
         <p class="small">
             There are no ads or trackers on this site. Chapter comments are provided through GitHub using utteranc.es which may use its own cookies. You are free to not participate by not logging in with GitHub. Please enjoy this book. If you want to support me you will find a ko-fi link in chapter footers. Rate this novel <a href="https://www.novelupdates.com/series/nightwatcher/">here</a>.
         </p>
