--- a/dagengren/story/456.html
+++ b/dagengren/story/456.html
@@ -390,7 +390,7 @@ Smelling the fragrant broth from the boiling pot, the infantrymen gulped.
 
 Xu Xinnian stepped forward and asked, “Who here holds the highest rank? Step forward and speak.”
 
-A burly, bearded man came up, around forty years old. He cupped his fists and said, “This officer is Zhao Panyi, Baihu captain of the Yongxi county garrison.”
+A burly, bearded man came up, around forty years old. He cupped his fists and said, “This officer is Zhao Panyi, Baihu captain of the Yongzhou Xi county garrison.”
 
 Xu Xinnian nodded. “I am Xu Xinnian, Assistant Surveillance Commissioner of Dingzhou, and Hanlin Academy Bachelor.”
 
@@ -425,6 +425,7 @@ Zhao Panyi spat and said:
 ---
 
 [^1]: 须 (first tone), different Xu to Xu Qi’an (许)
+
 
 </div>
 
