--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -564,6 +564,7 @@
         <li><a href="./story/455.html">Honest announcement in the Heaven and Earth Society group</a></li>
         <li><a href="./story/456.html">Each Side</a></li>
         <li><a href="./story/457.html">The Truth that Disappeared</a></li>
+        <li><a href="./story/458.html">Reverse Social Death</a></li>
     </ol>
 
     <hr>
