--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -565,6 +565,7 @@
         <li><a href="./story/456.html">Each Side</a></li>
         <li><a href="./story/457.html">The Truth that Disappeared</a></li>
         <li><a href="./story/458.html">Reverse Social Death</a></li>
+        <li><a href="./story/459.html">A House Deserted</a></li>
     </ol>
 
     <hr>
