--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -566,6 +566,7 @@
         <li><a href="./story/457.html">The Truth that Disappeared</a></li>
         <li><a href="./story/458.html">Reverse Social Death</a></li>
         <li><a href="./story/459.html">A House Deserted</a></li>
+        <li><a href="./story/460.html">Part of the Truth</a></li>
     </ol>
 
     <hr>
