--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -567,6 +567,7 @@
         <li><a href="./story/458.html">Reverse Social Death</a></li>
         <li><a href="./story/459.html">A House Deserted</a></li>
         <li><a href="./story/460.html">Part of the Truth</a></li>
+        <li><a href="./story/461.html">Exploring the Late Emperor's Tomb</a></li>
     </ol>
 
     <hr>
