--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -569,6 +569,7 @@
         <li><a href="./story/460.html">Part of the Truth</a></li>
         <li><a href="./story/461.html">Exploring the Late Emperor's Tomb</a></li>
         <li><a href="./story/462.html">Surprise Manoeuvre</a></li>
+        <li><a href="./story/463.html">Commendable Bravery</a></li>
     </ol>
 
     <hr>
