--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -570,6 +570,7 @@
         <li><a href="./story/461.html">Exploring the Late Emperor's Tomb</a></li>
         <li><a href="./story/462.html">Surprise Manoeuvre</a></li>
         <li><a href="./story/463.html">Commendable Bravery</a></li>
+        <li><a href="./story/464.html">Hurts, doesn't it?</a></li>
     </ol>
 
     <hr>
