--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -571,6 +571,7 @@
         <li><a href="./story/462.html">Surprise Manoeuvre</a></li>
         <li><a href="./story/463.html">Commendable Bravery</a></li>
         <li><a href="./story/464.html">Hurts, doesn't it?</a></li>
+        <li><a href="./story/465.html">Wei Yuan's Final Hand</a></li>
     </ol>
 
     <hr>
