--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -573,6 +573,7 @@
         <li><a href="./story/464.html">Hurts, doesn't it?</a></li>
         <li><a href="./story/465.html">Wei Yuan's Final Hand</a></li>
         <li><a href="./story/466.html">Unmatched in the Nation</a></li>
+        <li><a href="./story/467.html">Grevious News</a></li>
     </ol>
 
     <hr>
