--- a/dagengren/story/466.html
+++ b/dagengren/story/466.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="double" id="double">
-# 466X. Unmatched in the Nation
+# 466. Unmatched in the Nation
 
 In the azure sky, the clouds suddenly collapsed and vanished completely, leaving only a clear blue expanse.
 
