--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -574,6 +574,7 @@
         <li><a href="./story/465.html">Wei Yuan's Final Hand</a></li>
         <li><a href="./story/466.html">Unmatched in the Nation</a></li>
         <li><a href="./story/467.html">Grevious News</a></li>
+        <li><a href="./story/468.html">Funeral Rites</a></li>
     </ol>
 
     <hr>
