--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -574,7 +574,8 @@
         <li><a href="./story/465.html">Wei Yuan's Final Hand</a></li>
         <li><a href="./story/466.html">Unmatched in the Nation</a></li>
         <li><a href="./story/467.html">Grevious News</a></li>
-        <li><a href="./story/468.html">Funeral Rites</a></li>
+        <li><a href="./story/468.html">Final Farewell</a></li>
+        <li><a href="./story/469.html">Leader</a></li>
     </ol>
 
     <hr>
