--- a/dagengren/story/468.html
+++ b/dagengren/story/468.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="double" id="double">
-# 468. Funeral Rites
+# 468. Final Farewell
 
 Xu Qi’an was slightly taken aback, then his gaze turned razor-sharp. He stared at the middle-aged official and said in a low voice, “This joke isn’t funny.”
 
