--- a/dagengren/story/469.html
+++ b/dagengren/story/469.html
@@ -348,9 +348,9 @@ Though they failed to take the capital of Yan, Duke Wei had achieved his goal, t
 
 Zhang Kaitai spoke on, until he came to the part where Wei Yuan summoned the apparition of the Confucian Saint and fought the Warlock God to the death.
 
-*It was him. It was him. It was Zhen De…* Xu Qi’an’s face twisted.
+*It was him. It was him. It was Zhende…* Xu Qi’an’s face twisted.
 
-Having heard the whole account, he was now certain, the mysterious expert who had worked with the Church of the Warlock God to kill Wei Yuan was none other than the former Emperor, Zhen De.
+Having heard the whole account, he was now certain, the mysterious expert who had worked with the Church of the Warlock God to kill Wei Yuan was none other than the former Emperor, Zhende.
 
 </div>
 
