--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -576,6 +576,7 @@
         <li><a href="./story/467.html">Grevious News</a></li>
         <li><a href="./story/468.html">Final Farewell</a></li>
         <li><a href="./story/469.html">Leader</a></li>
+        <li><a href="./story/470.html">Siege</a></li>
     </ol>
 
     <hr>
