--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -577,6 +577,7 @@
         <li><a href="./story/468.html">Final Farewell</a></li>
         <li><a href="./story/469.html">Leader</a></li>
         <li><a href="./story/470.html">Siege</a></li>
+        <li><a href="./story/471.html">Events from Wei Yuan's Past</a></li>
     </ol>
 
     <hr>
