--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -578,6 +578,7 @@
         <li><a href="./story/469.html">Leader</a></li>
         <li><a href="./story/470.html">Siege</a></li>
         <li><a href="./story/471.html">Events from Wei Yuan's Past</a></li>
+        <li><a href="./story/472.html">Quick! He takes the head of the enemy general from amidst myriad soldiers</a></li>
     </ol>
 
     <hr>
