--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -579,6 +579,7 @@
         <li><a href="./story/470.html">Siege</a></li>
         <li><a href="./story/471.html">Events from Wei Yuan's Past</a></li>
         <li><a href="./story/472.html">Quick! He takes the head of the enemy general from amidst myriad soldiers</a></li>
+        <li><a href="./story/473.html">Yang Qianhuan's Arrival</a></li>
     </ol>
 
     <hr>
