--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -580,6 +580,7 @@
         <li><a href="./story/471.html">Events from Wei Yuan's Past</a></li>
         <li><a href="./story/472.html">Quick! He takes the head of the enemy general from amidst myriad soldiers</a></li>
         <li><a href="./story/473.html">Yang Qianhuan's Arrival</a></li>
+        <li><a href="./story/474.html">Return to the Capital</a></li>
     </ol>
 
     <hr>
