--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -581,6 +581,7 @@
         <li><a href="./story/472.html">Quick! He takes the head of the enemy general from amidst myriad soldiers</a></li>
         <li><a href="./story/473.html">Yang Qianhuan's Arrival</a></li>
         <li><a href="./story/474.html">Return to the Capital</a></li>
+        <li><a href="./story/475.html">What? Silver Gong Xu slew hundreds of thousands of enemy soliders with one strike?</a></li>
     </ol>
 
     <hr>
