--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -582,6 +582,7 @@
         <li><a href="./story/473.html">Yang Qianhuan's Arrival</a></li>
         <li><a href="./story/474.html">Return to the Capital</a></li>
         <li><a href="./story/475.html">What? Silver Gong Xu slew hundreds of thousands of enemy soliders with one strike?</a></li>
+        <li><a href="./story/476.html">He was Smiling</a></li>
     </ol>
 
     <hr>
