--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -583,6 +583,7 @@
         <li><a href="./story/474.html">Return to the Capital</a></li>
         <li><a href="./story/475.html">What? Silver Gong Xu slew hundreds of thousands of enemy soliders with one strike?</a></li>
         <li><a href="./story/476.html">He was Smiling</a></li>
+        <li><a href="./story/477.html">Imperial Accusation</a></li>
     </ol>
 
     <hr>
