--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -585,6 +585,7 @@
         <li><a href="./story/476.html">He was Smiling</a></li>
         <li><a href="./story/477.html">Imperial Accusation</a></li>
         <li><a href="./story/478.html">Xu Qi'an Awakes</a></li>
+        <li><a href="./story/479.html">Revealing the Conspiracy</a></li>
     </ol>
 
     <hr>
