--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -586,6 +586,8 @@
         <li><a href="./story/477.html">Imperial Accusation</a></li>
         <li><a href="./story/478.html">Xu Qi'an Awakes</a></li>
         <li><a href="./story/479.html">Revealing the Conspiracy</a></li>
+        <li><a href="./story/480.html">Wei Yuan's Preparation</a></li>
+        <li><a href="./story/481.html">Preparations Beforehand</a></li>
     </ol>
 
     <hr>
