--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -588,6 +588,7 @@
         <li><a href="./story/479.html">Revealing the Conspiracy</a></li>
         <li><a href="./story/480.html">Wei Yuan's Preparation</a></li>
         <li><a href="./story/481.html">Preparations Beforehand</a></li>
+        <li><a href="./story/482.html">What Loyalty?</a></li>
     </ol>
 
     <hr>
